--- a/KOI/2017_KOI_초등부.md
+++ b/KOI/2017_KOI_초등부.md
@@ -245,7 +245,7 @@ int main(void) {
 	}
 	```
 
-# 4. 줄서기
+## 4. 줄서기
 문제를 보기 위해 [여기](https://www.acmicpc.net/problem/14864)를 클릭하세요.
 
 * (a, b) 입력 하나가 들어오면 a는 순위가 하나 앞서게 되고, b는 순위가 하나 뒤서게 된다.
@@ -253,7 +253,7 @@ int main(void) {
 			따라서 a에 해당하는 학생 순서는 ++, b 학생 순서는 --
 			scanf("%d %d", &a, &b);
 	    list[a]++; list[b]--;
-		
+
 
 ```cpp
 
