--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -27,5 +27,46 @@ int main(void)
 ## 2. 세로읽기
 문제를 보기 위해 [여기](https://www.acmicpc.net/problem/10798)를 클릭하세요.
 
+* C++ 에서 특정 사이즈의 string[][]을 만들고 특정 칸들의 값을 따로 입력하지 않으면 아무런 값도 갖지 않음.
+
+
+      EX] 아래 코드에서 string line[5][15]를 생성한 뒤
+      들어오는 입력 string 한줄씩 받으면 한 줄당 최대 길이는 15글자이므로
+      15칸이 모두 입력이 들어오지 않을수도 있음.
+      그러나 아래 코드에서와 같이 비어있는(입력이 따로 들어오지 않은) 칸은 신경쓰지 않고
+      그냥 cout을 실행하면 빈 칸을 무시한 채 string이 들어있는 칸의 string만 출력해줌.
+      따라서 비어있는 칸에 대한 처리를 할 필요가 없음.
+
+
 ```cpp
+
+#include <iostream>
+#include <string>
+using namespace std;
+
+string line[5][15];
+string input;
+int main(void)
+{
+	//입력 받기
+	for (int i = 0; i < 5; i++)
+	{
+		cin >> input;
+		for (int j = 0; j < input.length(); j++)
+		{
+			line[i][j] = input[j];
+		}
+	}
+
+	//세로로 읽기
+	for (int i = 0; i < 15; i++)
+	{
+		for (int j = 0; j < 5; j++)
+		{
+			cout << line[j][i];
+		}
+	}
+
+	return 0;
+}
 ```
