--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -70,3 +70,69 @@ int main(void)
 	return 0;
 }
 ```
+
+
+## 3. 쇠막대기
+Main Points:
+* 레이저와 쇠막대기 구별하여 입력 정리:
+
+레이저는 '*'로 변환하여 배열 in[]에 넣기, 나머지 괄호는 그대로 배열에 넣기
+
+* '('를 만나면 우선 막대기 하나가 생성되는 것이므로 num++
+* '*'를 만나면 레이저가 지나가는 막대기 개수만큼 전체 조각이 증가하므로 num=num+
+[쇠막대기]!(/images/쇠막대기.jpg)
+
+```cpp
+
+#include <iostream>
+#include <string>
+#define MAX 100000
+using namespace std;
+
+string input;
+int i, j, block, laser, tmp, num;
+string in[MAX];
+
+
+int main(void)
+{
+  //입력받기
+	cin >> input;
+	while (j < input.length())
+	{
+		if (input[j] == '(' && input[j + 1] == ')')
+		{
+			in[i] = '*';
+			j += 2;
+			laser++;
+		}
+		else {
+			in[i] = input[j];
+			j++;
+			block++;
+		}
+		i++;
+	}
+
+// 전체 조각 세기
+	for (int k = 0; k < laser + block; k++)
+	{
+		if (in[k] == "(")
+		{
+			tmp++;
+			num++;
+
+		}
+		else if (tmp != 0 && in[k] == "*")
+		{
+			num += tmp;
+		}
+		else if(in[k] == ")")
+		{
+			tmp--;
+		}
+	}
+//결과출력
+	cout << num;
+	return 0;
+}
