--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -80,7 +80,8 @@ Main Points:
 
 * '('를 만나면 우선 막대기 하나가 생성되는 것이므로 num++
 * '*'를 만나면 레이저가 지나가는 막대기 개수만큼 전체 조각이 증가하므로 num=num+
-[쇠막대기]!(/images/쇠막대기.jpg)
+
+![쇠막대기](/images/쇠막대기.jpg)
 
 ```cpp
 
