koi minor edits

--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -1,4 +1,5 @@
 # 2015 정보올림피아드.도지역본선 초등부
+*C++로 작성했습니다.*
 
 ## 1. 10부제
 문제를 보기 위해 [여기](https://www.acmicpc.net/problem/10797)를 클릭하세요.
@@ -73,7 +74,9 @@ int main(void)
 
 
 ## 3. 쇠막대기
-Main Points:
+문제를 보기 위해 [여기](https://www.acmicpc.net/problem/10799)를 클릭하세요.
+
+### Main Points:
 * 레이저와 쇠막대기 구별하여 입력 정리:
 레이저는 '*'로 변환하여 배열 in[]에 넣기, 나머지 괄호는 그대로 배열에 넣기
 
@@ -83,12 +86,13 @@ Main Points:
 ![쇠막대기](/images/쇠막대기.jpg)
 
 ```cpp
-
 #include <iostream>
 #include <string>
 #define MAX 100000
 using namespace std;
 
+//tmp: 현재 있는 막대기 개수
+//num: 전체 막대기 조각 개수
 string input;
 int i, j, block, laser, tmp, num;
 string in[MAX];
@@ -136,3 +140,12 @@ int main(void)
 	cout << num;
 	return 0;
 }
+```
+
+
+## 4. 컬러볼
+문제를 보기 위해 [여기](https://www.acmicpc.net/problem/10799)를 클릭하세요.
+
+
+### Main Points
+*
