--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -142,10 +142,120 @@ int main(void)
 }
 ```
 
-
+```
 ## 4. 컬러볼
 문제를 보기 위해 [여기](https://www.acmicpc.net/problem/10799)를 클릭하세요.
 
 
 ### Main Points
-*
+* 문제를 가장 무식하게 풀 경우는, 하나의 공이 잡을 수 있는 공을 판별하기 위해 모든 공을 일일이 훑는 작업하는 경우이다.
+
+  이 경우 N x N의 시간이 걸려서 시간초과가 뜬다. 따라서 다른 방식의 접근이 필요하다.
+* 그래서 생각난 방법은 하나의 공에 대해 자신의 무게보다 적은 공에 대해서만 훑는 작업을 하도록 **무게를 기준으로 정렬** 하는 것이다.
+* 그런데 정렬을 한 뒤, 자신보다 무게가 적은 모든 공을 훑도록 코드를 작성하면 역시나 N^2의 복잡도를 갖는다.
+
+(총 N개의 공이 있을 때, 1~N의 합이 수행시간이 되므로, N x (N-1) / 2 의 시간이 걸리기 때문)
+* 따라서 매번 훑는 일을 할 게 아니라, N개의 공들을 딱 한 번씩만 훑고, 변수와 배열을 이용해서 훑을 때 계산한 값들을 누적해 나가야 한다.
+
+
+      * int total: 공 하나하나의 무게를 누적한 합
+      * int color[N + 1]: 공 color 번호를 기준으로 만든 배열(1번 color은 배열의 1번에 해당). 공 하나 훑을 때, 그 공의 color번호에 그 공 무게를 누적하여 합하므로써 중복된 컬러 공들의 무게 합을 알 수 있음.
+      * int sum[N + 1]: sum[i] = total - color[i] i번째 공의 점수를 입력하는 배열. i번째 공 점수는 현재까지 누적된 total 점수에서 자신의 컬러와 중복된 컬러의 공들의 무게 합을 뺀 값이다.
+
+
+### 그 외 알게 된 point들
+* 코드 수행시간 늘리는 요소들 :
+- cin/cout VS scanf/printf: 후자가 더 빠름. 동일한 내용의 코드를 전자로 작성할 경우 시간 초과가 뜨는 경우가 종종 있음.
+- 반복문의 중첩
+
+
+* 코드 메모리 늘리는 요소:
+- 불필요한 #include
+
+EX] iostream을 사용하지 않았는데 #include <iostream>을 코드에 포함시켰다면 메모리가 약 868kb 증가함.
+
+### Source Code
+1) N^2 시간초과
+```cpp
+#include <iostream>
+#define MAX 200000
+using namespace std;
+
+int info[MAX][3];
+int N, color, siz;
+
+int main(void)
+{
+	cin >> N;
+	for (int i = 1; i < N + 1; i++)
+	{
+		cin >> color;
+		info[i][0] = color;
+		cin >> siz;
+		info[i][1] = siz;
+	}
+
+	for (int i = 1; i < N + 1; i++)
+	{
+		for (int j = 1; j < N + 1; j++)
+		{
+			if (info[i][0] != info[j][0] && info[i][1] > info[j][1])
+			{
+				info[i][2] += info[j][1];
+			}
+		}
+	}
+
+	for (int i = 1; i < N + 1; i++)
+	{
+		cout << info[i][2] << endl;
+	}
+	return 0;
+}
+```
+
+
+
+2) 정답
+```cpp
+#include <cstdio>
+#include <algorithm>
+using namespace std;
+#define MAX 200000
+
+int sum[MAX + 1];
+int color[MAX + 1];
+int N, total;
+
+struct ball {
+	int c, s, idx;
+}ballArray[MAX + 1];
+
+bool myComp(const ball& a, const ball& b) {
+	return a.s < b.s;
+}
+
+int main(void)
+{
+	scanf("%d", &N);
+	for (int i = 1; i < N + 1; i++) {
+		scanf("%d%d", &ballArray[i].c, &ballArray[i].s);
+		ballArray[i].idx = i;
+	}
+
+	sort(ballArray, ballArray + N + 1, myComp);
+
+	for (int i = 1, j = 1; i < N + 1; i++) {
+		for (; ballArray[j].s < ballArray[i].s; j++) {
+			total += ballArray[j].s;
+			color[ballArray[j].c] += ballArray[j].s;
+		}
+	sum[ballArray[i].idx] = total - color[ballArray[i].c];
+	}
+
+	for (int i = 1; i <= N; i++) {
+		printf("%d\n", sum[i]);
+	}
+	return 0;
+}
+```
