--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -150,31 +150,33 @@ int main(void)
 * 문제를 가장 무식하게 풀 경우는, 하나의 공이 잡을 수 있는 공을 판별하기 위해 모든 공을 일일이 훑는 작업하는 경우이다.
 
   이 경우 N x N의 시간이 걸려서 시간초과가 뜬다. 따라서 다른 방식의 접근이 필요하다.
-* 그래서 생각난 방법은 하나의 공에 대해 자신의 무게보다 적은 공에 대해서만 훑는 작업을 하도록 **무게를 기준으로 정렬** 하는 것이다.
-* 그런데 정렬을 한 뒤, 자신보다 무게가 적은 모든 공을 훑도록 코드를 작성하면 역시나 N^2의 복잡도를 갖는다.
+* 그래서 생각난 방법은 하나의 공에 대해 자신의 사이즈보다 적은 공에 대해서만 훑는 작업을 하도록 **사이즈를 기준으로 정렬** 하는 것이다.
+* 그런데 정렬을 한 뒤, 자신보다 사이즈가 적은 모든 공을 훑도록 코드를 작성하면 역시나 N^2의 복잡도를 갖는다.
 
 (총 N개의 공이 있을 때, 1~N의 합이 수행시간이 되므로, N x (N-1) / 2 의 시간이 걸리기 때문)
 * 따라서 매번 훑는 일을 할 게 아니라, N개의 공들을 딱 한 번씩만 훑고, 변수와 배열을 이용해서 훑을 때 계산한 값들을 누적해 나가야 한다.
 
 
-      * int total: 공 하나하나의 무게를 누적한 합
-      * int color[N + 1]: 공 color 번호를 기준으로 만든 배열(1번 color은 배열의 1번에 해당). 공 하나 훑을 때, 그 공의 color번호에 그 공 무게를 누적하여 합하므로써 중복된 컬러 공들의 무게 합을 알 수 있음.
-      * int sum[N + 1]: sum[i] = total - color[i] i번째 공의 점수를 입력하는 배열. i번째 공 점수는 현재까지 누적된 total 점수에서 자신의 컬러와 중복된 컬러의 공들의 무게 합을 뺀 값이다.
+      * int total: 공 하나하나의 사이즈를 누적한 합
+      * int color[N + 1]: 공 color 번호를 기준으로 만든 배열(1번 color은 배열의 1번에 해당). 공 하나 훑을 때, 그 공의 color번호에 그 공 사이즈를 누적하여 합하므로써 중복된 컬러 공들의 사이즈 합을 알 수 있음.
+      * int sum[N + 1]: sum[i] = total - color[i] i번째 공의 점수를 입력하는 배열. i번째 공 점수는 현재까지 누적된 total 점수에서 자신의 컬러와 중복된 컬러의 공들의 사이즈 합을 뺀 값이다.
 
 
 ### 그 외 알게 된 point들
 * 코드 수행시간 늘리는 요소들 :
-- cin/cout VS scanf/printf: 후자가 더 빠름. 동일한 내용의 코드를 전자로 작성할 경우 시간 초과가 뜨는 경우가 종종 있음.
-- 반복문의 중첩
+
+      - cin/cout VS scanf/printf: 후자가 더 빠름. 동일한 내용의 코드를 전자로 작성할 경우 시간 초과가 뜨는 경우가 종종 있음.
+      - 반복문의 중첩
 
 
 * 코드 메모리 늘리는 요소:
-- 불필요한 #include
 
-EX] iostream을 사용하지 않았는데 #include <iostream>을 코드에 포함시켰다면 메모리가 약 868kb 증가함.
+      - 불필요한 #include: [EX] iostream을 사용하지 않았는데 #include <iostream>을 코드에 포함시켰다면 메모리가 약 868kb 증가함.
+
+
 
 ### Source Code
-1) N^2 시간초과
+**1) N^2 시간초과**
 ```cpp
 #include <iostream>
 #define MAX 200000
@@ -215,7 +217,7 @@ int main(void)
 
 
 
-2) 정답
+**2) 정답**
 ```cpp
 #include <cstdio>
 #include <algorithm>
@@ -245,7 +247,7 @@ int main(void)
 	sort(ballArray, ballArray + N + 1, myComp);
 
 	for (int i = 1, j = 1; i < N + 1; i++) {
-		for (; ballArray[j].s < ballArray[i].s; j++) {
+		for (; ballArray[j].s < ballArray[i].s; j++) {  // j < i로 하면 오답. 아래 Source Code Notes 참조.
 			total += ballArray[j].s;
 			color[ballArray[j].c] += ballArray[j].s;
 		}
@@ -258,3 +260,11 @@ int main(void)
 	return 0;
 }
 ```
+### Source Code Notes
+2번 source code에서 ballArray 배열이 이미 정렬 된 상태이기 때문에 중첩 for loop의 두번째 for문을 ```j < i```로 하면 안될까? 하는 생각이 들었다.
+
+그러나 sort() 함수의 정렬 기준을 ```return a.s < b.s;``` 으로 정했기 때문에, 사이즈가 동일한 공들이 존재할 경우, 입력된 순서가 유지된 채로 정렬 된다.
+
+이 경우, 두 번째 for문에 ```j < i``` 로 작업할 경우, ballArray 배열에서 index는 앞서지만, 사이즈는 동일한 공까지도 포함하여 점수를 합산하게 되기 때문에 오답이다.
+
+그래서 올바른 답은 ```ballArray[j].s < ballArray[i].s``` .
