--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -246,8 +246,8 @@ int main(void)
 
 	sort(ballArray, ballArray + N + 1, myComp);
 
-	for (int i = 1, j = 1; i < N + 1; i++) {
-		for (; ballArray[j].s < ballArray[i].s; j++) {  // j < i로 하면 오답. 아래 Source Code Notes 참조.
+	for (int i = 1, j = 1; i < N + 1; i++) { // nested for loop에서 한줄에 multiple variable 선언 관련: 아래 Source Code Notes 1번 참조
+		for (; ballArray[j].s < ballArray[i].s; j++) {  // j < i로 하면 오답. 아래 Source Code Notes 2번 참조.
 			total += ballArray[j].s;
 			color[ballArray[j].c] += ballArray[j].s;
 		}
@@ -261,6 +261,31 @@ int main(void)
 }
 ```
 ### Source Code Notes
+**1.  nested for loop: 한줄에 multiple variable 선언하기?**
+for ( **int i = 1, j = 1** ; i < N + 1; i++) {
+  for (; ballArray[j].s < ballArray[i].s; j++){
+      ...
+  }
+}
+
+이 형식과 아래 형식의 다른점은?
+for ( int i = 1; i < N + 1; i++) {
+  for ( **j = 1** ; ballArray[j].s < ballArray[i].s; j++){
+      ...
+  }
+}
+
+**문법 차이**
+int j의 선언 시점이 다르다. 전자는 두번째 for문을 모두 돌고 나와도 j값이 소멸되지 않고 그대로 유지되므로 첫번째 for문을 돌때 j값이 매번 1에서 다시 시작하지 않고 계속해서 ++ 처리가 된다. 반면 후자는 두번째 for문을 모두 돌고 나와서 첫번째 for문을 돌때마다 j값이 매번 1에서 다시 시작한다.
+
+**알고리즘상의 차이는?**
+i의 for loop을 한번 돌때 전자는 두번째 for loop에서 j= 1, 2, ... ballArray[j].s < ballArray[i].s 번 돌고
+
+후자는 이전 j값이 5였다면 두번째 for loop에서 j = 6으로 시작하므로 시간 복잡도가 절약된다.
+
+
+
+**2. ```ballArray[j].s < ballArray[i].s``` VS ```j < i```**
 2번 source code에서 ballArray 배열이 이미 정렬 된 상태이기 때문에 중첩 for loop의 두번째 for문을 ```j < i```로 하면 안될까? 하는 생각이 들었다.
 
 그러나 sort() 함수의 정렬 기준을 ```return a.s < b.s;``` 으로 정했기 때문에, 사이즈가 동일한 공들이 존재할 경우, 입력된 순서가 유지된 채로 정렬 된다.
