--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -261,7 +261,7 @@ int main(void)
 }
 ```
 ### Source Code Notes
-**1.  nested for loop: 한줄에 multiple variable 선언하기?**
+**_1.  nested for loop: 한줄에 multiple variable 선언하기?_**
 
 for ( **int i = 1, j = 1** ; i < N + 1; i++) {
   for (; ballArray[j].s < ballArray[i].s; j++){
@@ -289,7 +289,7 @@ i의 for loop을 한번 돌때 전자는 두번째 for loop에서 j= 1, 2, ... b
 
 
 
-**2. ```ballArray[j].s < ballArray[i].s``` VS ```j < i```**
+**_2. ```ballArray[j].s < ballArray[i].s``` VS ```j < i```_**
 
 2번 source code에서 ballArray 배열이 이미 정렬 된 상태이기 때문에 중첩 for loop의 두번째 for문을 ```j < i```로 하면 안될까? 하는 생각이 들었다.
 
