--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -262,30 +262,28 @@ int main(void)
 ```
 ### Source Code Notes
 **_1.  nested for loop: 한줄에 multiple variable 선언하기?_**
-
+```
 for ( **int i = 1, j = 1** ; i < N + 1; i++) {
   for (; ballArray[j].s < ballArray[i].s; j++){
       ...
   }
 }
-
+```
 이 형식과 아래 형식의 다른점은?
-
+```
 for ( int i = 1; i < N + 1; i++) {
   for ( **j = 1** ; ballArray[j].s < ballArray[i].s; j++){
       ...
   }
 }
+```
+  -**문법 차이**
 
-**문법 차이**
+  int j의 선언 시점이 다르다. 전자는 두번째 for문을 모두 돌고 나와도 j값이 소멸되지 않고 그대로 유지되므로 첫번째 for문을 돌때 j값이 매번 1에서 다시 시작하지 않고 계속해서 ++ 처리가 된다. 반면 후자는 두번째 for문을 모두 돌고 나와서 첫번째 for문을 돌때마다 j값이 매번 1에서 다시 시작한다.
 
-int j의 선언 시점이 다르다. 전자는 두번째 for문을 모두 돌고 나와도 j값이 소멸되지 않고 그대로 유지되므로 첫번째 for문을 돌때 j값이 매번 1에서 다시 시작하지 않고 계속해서 ++ 처리가 된다. 반면 후자는 두번째 for문을 모두 돌고 나와서 첫번째 for문을 돌때마다 j값이 매번 1에서 다시 시작한다.
+  -**알고리즘상의 차이는?**
 
-**알고리즘상의 차이는?**
-
-i의 for loop을 한번 돌때 전자는 두번째 for loop에서 j= 1, 2, ... ballArray[j].s < ballArray[i].s 번 돌고
-
-후자는 이전 j값이 5였다면 두번째 for loop에서 j = 6으로 시작하므로 시간 복잡도가 절약된다.
+  i의 for loop을 한번 돌때 전자는 두번째 for loop에서 j= 1, 2, ... ballArray[j].s < ballArray[i].s 번 돌고, 후자는 이전 j값이 5였다면 두번째 for loop에서 j = 6으로 시작하므로 시간 복잡도가 절약된다.
 
 
 
