--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -279,7 +279,7 @@ for ( int i = 1; i < N + 1; i++) {
 ```
   -**문법 차이**
 
-  int j의 선언 시점이 다르다. 전자는 두번째 for문을 모두 돌고 나와도 j값이 소멸되지 않고 그대로 유지되므로 첫번째 for문을 돌때 j값이 매번 1에서 다시 시작하지 않고 계속해서 ++ 처리가 된다. 반면 후자는 두번째 for문을 모두 돌고 나와서 첫번째 for문을 돌때마다 j값이 매번 1에서 다시 시작한다.
+  int j의 선언 시점이 다르다. 전자는 두번째 for문을 모두 돌고 나와도 j값이 그대로 살아있다. 바깥 for문을 돌때마다 j값이 매번 1에서 다시 시작하지 않고 계속해서 ++ 처리가 되므로 j가 중복적으로 작업되지 않는다. 반면 후자는 두번째 for문을 모두 돌고 나와서 첫번째 for문을 돌때마다 j값이 매번 1에서 다시 시작한다.
 
   -**알고리즘상의 차이는?**
 
