--- a/KOI/2014_KOI_도지역본선_초등부.md
+++ b/KOI/2014_KOI_도지역본선_초등부.md
@@ -29,3 +29,59 @@ public class Main {
 }
 
 ```
+
+
+## 2. 자리배정
+문제를 보기 위해 [여기](https://www.acmicpc.net/problem/10157)를 클릭하세요.
+
+* 문제 핵심: c * r 배열이 주어졌을 때, i번째 원소의 좌표를 출력하라.
+
+* 배열에 관한 기초적인 연습을 많이 해두는 게 진짜 중요하다고 느끼게 해 준 문제이다. (아래 **관련주제들** 참고)
+
+
+### 관련 주제들
+**[1]ㄹ배열 채우기**
+```java
+import java.util.*;
+
+public class test {
+
+	public static void main(String[] args) {
+		Scanner scanner = new Scanner(System.in);
+		String input = scanner.nextLine();
+		String str[] = input.split(" ");
+		int r= Integer.parseInt(str[0]);	//row
+		int c = Integer.parseInt(str[1]);	//column
+		int[][] arr = new int[r][c];
+
+		int n = 0;
+		for(int i = 0; i < arr.length; i++) {
+			if(i % 2 == 0) {	// even row
+				for(int j = 0; j < c;j++) {
+					arr[i][j] = n;
+					n++;
+				}
+			}
+			else {	// odd row
+				for(int j = c - 1;j > -1; j--) {
+					arr[i][j] = n;
+					n++;
+				}
+			}			
+		}
+
+		for(int i = 0;i < r;i++) {
+			for(int j=0; j<c; j++) {
+				System.out.print(arr[i][j] + " ");
+			}
+			System.out.print("\n");
+		}		
+	}
+}
+```
+https://m.blog.naver.com/PostView.nhn?blogId=ruvendix&logNo=220914362318&proxyReferer=https%3A%2F%2Fwww.google.co.kr%2F
+**[2]정사각형 달팽이 배열(spiral matrix) 채우기**
+
+**[3]직사각형 달팽이 배열 채우기**
+
+**C++ 동적 배열 할당하기**
