--- a/KOI/2015_KOI_도지역본선_초등부.md
+++ b/KOI/2015_KOI_도지역본선_초등부.md
@@ -149,7 +149,7 @@ int main(void)
 ### Main Points
 * 문제를 가장 무식하게 풀 경우는, 하나의 공이 잡을 수 있는 공을 판별하기 위해 모든 공을 일일이 훑는 작업하는 경우이다.
 
-  이 경우 N x N의 시간이 걸려서 시간초과가 뜬다. 따라서 다른 방식의 접근이 필요하다.
+  이 경우 N x N의 시간이 걸려서 시간초과가 뜬다. 시간제한이 1초인데, 최대 N은 200000이어서 제곱을 하면 일반적으로 1초의 기준이 되는 1억(10^8)을 초과하므로 시간초과이다. 따라서 다른 방식의 접근이 필요하다.
 * 그래서 생각난 방법은 하나의 공에 대해 자신의 사이즈보다 적은 공에 대해서만 훑는 작업을 하도록 **사이즈를 기준으로 정렬** 하는 것이다.
 * 그런데 정렬을 한 뒤, 자신보다 사이즈가 적은 모든 공을 훑도록 코드를 작성하면 역시나 N^2의 복잡도를 갖는다.
 
