--- a/주제별/6679 싱기한네자리.md
+++ b/주제별/6679 싱기한네자리.md
@@ -39,3 +39,15 @@ int main(void) {
 	return 0;
 }
 ```
+
+
+### Code Notes
+```
+while(dec > 0){
+	a += dec % 10;
+	dec /= 10;
+}
+```
+에서 ```while(dec > 0)```으로 정해두므로써 MSB 숫자도 자동으로 더해진다.
+처음에는 ```while(dec >= 10)```으로 하고, while문을 빠져나온 뒤에 MSB 숫자를 처리하려고 했는데
+복잡해서 이렇게 처리했다.
