--- a/주제별/6378 디지털루트.md
+++ b/주제별/6378 디지털루트.md
@@ -2,6 +2,7 @@
 
 문제는 [여기](https://www.acmicpc.net/problem/6378)를 클릭해주세요.
 
+* 1000 자리수까지 입력이 들어올 수 있으므로 int로 입력 받는 것이 아니라, string으로 받은 뒤, int로 변환하는 과정을 거쳐야 한다.
 
 
 ### Source Code
